src/test/deca/context/valid/provided/soustraction_float.deca
// Description:
//    Programme faisant la soustraction entre deux flottants
//
// Resultats: -0.1
//
// Historique:
//    cree le 01/01/2022

{
        float x = 3.0;
        float y = 3.1;
        println(x - y);
}
