src/test/deca/context/invalid/provided/soustraction_types_incompatibles.deca
/*/ Description:
//    Programme effectuant la soustraction entre deux types incompatibles.
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2022*/

{
        string a = "toto";
        int b = 5;
        int c = a - b;
}
